<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_opreation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">


    <TextView
        android:id="@+id/tv_operation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:textAlignment="viewStart"
        android:textColor="#E2000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <TextView
        android:id="@+id/tv_max_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:text="@string/Max_Stack"
        android:textAlignment="center"
        android:textColor="#E2000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="85dp" />

    <TextView
        android:id="@+id/tv_queue_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:text="@string/Stack_Size"
        android:textAlignment="center"
        android:textColor="#E2000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toStartOf="@+id/tv_size"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="85dp" />

    <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="8dp" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        tools:layout_conversion_absoluteHeight="411dp"
        tools:layout_conversion_absoluteWidth="3dp" />


    <ScrollView
        android:id="@+id/ScrollView_StackUserView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fadeScrollbars="false"
        android:fadingEdgeLength="15dp"
        android:requiresFadingEdge="horizontal"
        android:scrollbarSize="2dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@drawable/scrollbar_gradient_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_level_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_info"
            tools:layout_conversion_absoluteHeight="411dp"
            tools:layout_conversion_absoluteWidth="632dp">

            <LinearLayout
                android:id="@+id/ll_userViewStack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <View
        android:id="@+id/view7"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="411dp"
        tools:layout_conversion_absoluteWidth="3dp" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fadeScrollbars="false"
        android:fadingEdgeLength="15dp"
        android:requiresFadingEdge="horizontal"
        android:scrollbarSize="2dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbHorizontal="@drawable/scrollbar_gradient_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/implementation_level_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view7"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_info"
            tools:layout_conversion_absoluteHeight="117dp"
            tools:layout_conversion_absoluteWidth="157dp">

            <TableRow
                android:id="@+id/array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="679dp"
                tools:layout_editor_absoluteY="204dp" />

            <TableRow
                android:id="@+id/indices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/array"
                app:layout_constraintVertical_bias="0.04000002"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_editor_absoluteX="679dp"
                tools:layout_editor_absoluteY="206dp" />

            <ImageView
                android:id="@+id/iv_top_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/indices"
                app:layout_constraintTop_toBottomOf="@+id/indices"
                app:srcCompat="@drawable/arrow_up"
                tools:layout_conversion_absoluteHeight="37dp"
                tools:layout_conversion_absoluteWidth="24dp" />

            <TextView
                android:id="@+id/tv_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/iv_top_arrow"
                app:layout_constraintStart_toStartOf="@+id/iv_top_arrow"
                app:layout_constraintTop_toBottomOf="@+id/iv_top_arrow"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>